fixing layout issues on post#show

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -32,11 +32,6 @@ canvas#tideChart {
   height: 70px !important;
 }
 
-.wave-chart-container {
-  // width: 50%;
-  canvas#waveChart {  }
-}
-
 .arrow-small { height: 25px; margin: 0 0; } 
 
 // posts#index and pictures
